--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "joi": "^13.0.2",
+    "mongorito": "^3.0.4",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
