--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Ariel Alvarado",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "fastest-validator": "^0.6.5",
     "joi": "^13.0.2",
-    "mongoose": "^4.13.7",
+    "mongoose": "^5.0.0-rc0",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
