--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "fastest-validator": "^0.6.5",
+    "javascript-state-machine": "^3.0.1",
     "joi": "^13.0.2",
+    "moment": "^2.20.1",
     "mongoose": "^5.0.0-rc0",
     "winston": "^3.0.0-rc1"
   },
